# robotdog_vision

./: CMakeLists.txt
assets/: yolov5s_best.xml
assets/demo/: fire_demo.avi
configs/: ascento.yaml  camera.yaml  flower.yaml
io/: CMakeLists.txt  camera.cpp  camera.hpp
io/flower_usb/: flower_usb.cpp  flower_usb.hpp
src/: auto_aim_debug_mpc.cpp  standard_mpc.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  armor.hpp  detector.cpp  fire.cpp  fire.hpp  fire_yolo.cpp  fire_yolo.hpp  tracker.cpp  yolo.cpp
tasks/auto_aim/yolos/: fire_yolov5.cpp  fire_yolov5.hpp  pose_yolov8.cpp  yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp
tests/: auto_aim_test.cpp  auto_buff_test.cpp  camera_detect_test.cpp  camera_test.cpp  camera_thread_test.cpp  flower_test.cpp  flower_video_test.cpp
